--- a/src/components/QuestionCard/QuestionCard.styles.scss
+++ b/src/components/QuestionCard/QuestionCard.styles.scss
@@ -16,6 +16,7 @@
       padding: 80px 30px;
       font-size: 24px;
       text-align: center;
+      word-break: break-all;
     }
 
     fieldset legend {
